--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -23,8 +23,8 @@
                       Текст поста                  
                       <span class="required text-danger" >*</span>                  
                     </label>
-                    <textarea name="text" cols="40" rows="10" class="form-control" required id="id_text">
-                    </textarea>                
+                      {% csrf_token %}
+                      {{ form.text }}                
                     <small id="id_text-help" class="form-text text-muted">
                       Текст нового поста
                     </small>                  
@@ -35,7 +35,7 @@
                     </label>
                     <select name="group" class="form-control" id="id_group">
                       {% for group in form.group %}
-                      <value="{{group}}" selected>
+                        {{group}}
                       {% endfor %}
                     </select>
                     <small id="id_group-help" class="form-text text-muted">
