--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -19,7 +19,7 @@
                 Автор: {{ post.author.username }}
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора: {{ author.posts.count }}
+              Всего постов автора: {{ post.author.posts.count }}
               </li>
             <li class="list-group-item">
               <a href="{% url 'posts:profile' post.author.username %}">
