--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,16 +1,25 @@
 {% extends 'base.html' %}
-{% block title %} Создание поста {% endblock %}
+{% block title %}
+  {% if is_edit %}
+    Редактировать пост
+  {% else %} 
+    Новый пост
+  {% endif %}
+{% endblock %}
 {% block content %}
       <div class="container py-5">
         <div class="row justify-content-center">
           <div class="col-md-8 p-5">
             <div class="card">
               <div class="card-header">       
-                Новый пост             
+                {% if is_edit %}
+                  Редактировать пост
+                {% else %} 
+                  Новый пост
+                {% endif %}             
               </div>
               <div class="card-body">        
                 <form method="post" action="
-
                   {% if is_edit %}
                     {% url 'posts:post_edit' post.pk%} 
                   {% else %}
@@ -26,12 +35,16 @@
                       {% csrf_token %}
                       {{ form.text }}                
                     <small id="id_text-help" class="form-text text-muted">
-                      Текст нового поста
+                      {% if is_edit %}
+                        Редактирование поста
+                      {% else %} 
+                        Текст нового поста
+                      {% endif %}
                     </small>                  
                   </div>            
                   <div class="form-group row my-3 p-3">
                     <label for="id_group">
-                      Group                  
+                      Группа                  
                     </label>
                     <select name="group" class="form-control" id="id_group">
                       {% for group in form.group %}
@@ -44,7 +57,11 @@
                   </div>
                   <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-primary">
-                      Создать
+                      {% if is_edit %}
+                        Сохранить
+                      {% else %} 
+                        Добавить
+                      {% endif %}
                     </button>
                   </div>
                 </form>
