first submission for review

--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -21,9 +21,10 @@
         </ul>      
         <p>
           {{ post.text }}
-        </p>         
+        </p>
+        {% if not forloop.last %}<hr>{% endif %}         
       </article>
-      {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
   </div>  
+  {% include 'posts/includes/paginator.html' %}
 {% endblock content %}
